RESOLVED FIXED185062
Text shaping in the simple path is flipped in the y direction
https://bugs.webkit.org/show_bug.cgi?id=185062
Summary Text shaping in the simple path is flipped in the y direction
Myles C. Maxfield
Reported 2018-04-26 17:54:47 PDT
Font::applyTransforms() operates in an increasing-Y-goes-up coordinate system. However, the result of this call is drawn into an increasing-Y-goes-down coordinate system. We need to perform fixup. This was found from the fantastic TYPO Labs 2018 presentation from Ulrike Rausch of LiebeFonts at https://www.typotalks.com/videos/boon-and-bane-of-opentype-features/
Attachments
Needs test (2.59 KB, patch)
2018-04-26 18:41 PDT, Myles C. Maxfield
no flags
Patch (18.58 KB, patch)
2018-05-03 11:16 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.47 MB, application/zip)
2018-05-03 12:13 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews106 for mac-sierra-wk2 (3.58 MB, application/zip)
2018-05-03 12:30 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.41 MB, application/zip)
2018-05-03 12:48 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews115 for mac-sierra (3.03 MB, application/zip)
2018-05-03 13:59 PDT, EWS Watchlist
no flags
Patch (19.21 KB, patch)
2018-05-03 15:10 PDT, Myles C. Maxfield
simon.fraser: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews112 for mac-sierra (3.26 MB, application/zip)
2018-05-04 00:37 PDT, EWS Watchlist
no flags
Radar WebKit Bug Importer
Comment 1 2018-04-26 18:14:35 PDT
Myles C. Maxfield
Comment 2 2018-04-26 18:41:56 PDT
Created attachment 338948 [details] Needs test
EWS Watchlist
Comment 3 2018-04-26 18:44:22 PDT
Attachment 338948 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 4 2018-05-03 11:16:47 PDT
EWS Watchlist
Comment 5 2018-05-03 11:18:57 PDT
Attachment 339433 [details] did not pass style-queue: ERROR: Tools/Scripts/webkitpy/common/config/contributors.json:0: contributors.json should not be modified through the commit queue [json/syntax] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 6 2018-05-03 12:13:21 PDT
Comment on attachment 339433 [details] Patch Attachment 339433 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/7553437 New failing tests: fast/text/vertical-displacement-simple-codepath.html
EWS Watchlist
Comment 7 2018-05-03 12:13:22 PDT
Created attachment 339439 [details] Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8 2018-05-03 12:30:00 PDT
Comment on attachment 339433 [details] Patch Attachment 339433 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/7553491 New failing tests: fast/text/vertical-displacement-simple-codepath.html
EWS Watchlist
Comment 9 2018-05-03 12:30:02 PDT
Created attachment 339441 [details] Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 10 2018-05-03 12:48:06 PDT
Comment on attachment 339433 [details] Patch Attachment 339433 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/7553479 New failing tests: fast/text/vertical-displacement-simple-codepath.html
EWS Watchlist
Comment 11 2018-05-03 12:48:07 PDT
Created attachment 339445 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
EWS Watchlist
Comment 12 2018-05-03 13:59:10 PDT
Comment on attachment 339433 [details] Patch Attachment 339433 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/7554363 New failing tests: fast/text/vertical-displacement-simple-codepath.html
EWS Watchlist
Comment 13 2018-05-03 13:59:12 PDT
Created attachment 339458 [details] Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
Myles C. Maxfield
Comment 14 2018-05-03 15:10:08 PDT
EWS Watchlist
Comment 15 2018-05-03 15:12:50 PDT
Attachment 339475 [details] did not pass style-queue: ERROR: Tools/Scripts/webkitpy/common/config/contributors.json:0: contributors.json should not be modified through the commit queue [json/syntax] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 16 2018-05-03 23:59:11 PDT
Comment on attachment 339475 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=339475&action=review > Source/WebCore/platform/graphics/WidthIterator.cpp:118 > + advances[i].setHeight(advances[i].height() * -1); I think unary negation, -x, is a more straightforward way of writing this than multiplying by -1.
EWS Watchlist
Comment 17 2018-05-04 00:37:09 PDT
Comment on attachment 339475 [details] Patch Attachment 339475 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/7561352 New failing tests: imported/w3c/web-platform-tests/html/syntax/parsing/html5lib_tests21.html
EWS Watchlist
Comment 18 2018-05-04 00:37:11 PDT
Created attachment 339524 [details] Archive of layout-test-results from ews112 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-sierra Platform: Mac OS X 10.12.6
Myles C. Maxfield
Comment 19 2018-05-04 10:39:06 PDT
Note You need to log in before you can comment on or make changes to this bug.