Source/WebCore/platform/graphics/Font.cpp
@@ -368,7 +368,6 @@ RefPtr<Font> Font::createScaledFont(const FontDescription& fontDescription, floa
 
 bool Font::applyTransforms(GlyphBufferGlyph* glyphs, GlyphBufferAdvance* advances, size_t glyphCount, bool enableKerning, bool requiresShaping) const
 {
-    // We need to handle transforms on SVG fonts internally, since they are rendered internally.
 #if PLATFORM(COCOA)
     CTFontTransformOptions options = (enableKerning ? kCTFontTransformApplyPositioning : 0) | (requiresShaping ? kCTFontTransformApplyShaping : 0);
     return CTFontTransformGlyphs(m_platformData.ctFont(), glyphs, reinterpret_cast<CGSize*>(advances), glyphCount, options);
